web/style.css
html,
body {
    overflow: clip;
    width: 100lvw;
    height: 100lvh;
    padding: 0px;
    margin: 0px;
}

body {
    background-color: black;
}

img {
    -webkit-user-drag: none;
}

#background {
    position: absolute;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
}

#background>div {
    display: block;
    width: 100%;
    height: 100%;
    position: absolute;
    bottom: 0px;
}

#background>div>img {
    position: absolute;
    width: 1024px;
    height: 1024px;
    image-rendering: pixelated;
}

.character {
    position: absolute;
    image-rendering: pixelated;
}

.orray {
    width: 64px;
    height: 64px;
}

.oswin {
    width: 32px;
    height: 32px;
}

#background {
    z-index: -1;
}

.train {
    position: absolute;
    display: flex;
    flex-direction: row;
    bottom: 8px;
}

.train>.train-cart {
    position: relative;
    image-rendering: pixelated;
    width: 512px;
    height: 320px;
}

#train-tracks {
    position: absolute;
    bottom: 0px;
    z-index: 100;
    width: 800%;
    height: 16px;
    background-image: url("images/train_carts/TrainTracks.png");
    background-repeat: repeat-x;
    background-size: 256px 16px;
    image-rendering: pixelated;
}

